// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBar Should display correctly with action item as: Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  margin-right: 16px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

@media screen {
  .emotion-4 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-4 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-4 {
    display: block;
  }
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  cursor: pointer;
}

.emotion-5 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 svg {
  fill: #FFFFFF;
}

.emotion-5:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-5:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-5:disabled {
  background-color: #DEE2E5;
  color: #C0C7CC;
}

.emotion-5:disabled svg {
  fill: #C0C7CC;
}

.emotion-5:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-5:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-5 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-5 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-8 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-8::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-8::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h3
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
    <div
      class="emotion-4"
    >
      <button
        class="emotion-5"
        data-testid="button"
        type="button"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <span
              class="emotion-8"
            >
              Default button
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar Should display correctly with action item as: Button hidden in lg 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  margin-right: 16px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

@media screen {
  .emotion-4 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-4 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-4 {
    display: block;
  }
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  margin: 0;
  cursor: pointer;
}

.emotion-5 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 svg {
  fill: #FFFFFF;
}

.emotion-5:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-5:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-5:disabled {
  background-color: #DEE2E5;
  color: #C0C7CC;
}

.emotion-5:disabled svg {
  fill: #C0C7CC;
}

.emotion-5:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-5:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-5 {
    transition-property: background-color;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-5 {
    transition-property: background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-8 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-8::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-8::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h3
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
    <div
      class="emotion-4"
    >
      <button
        class="emotion-5"
        data-testid="button"
        type="button"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <span
              class="emotion-8"
            >
              Default button
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar Should display correctly with action item as: Link 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  margin-right: 16px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

@media screen {
  .emotion-4 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-4 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-4 {
    display: block;
  }
}

.emotion-5 {
  display: inline-block;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-5 {
    transition-property: color,fill;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-5 {
    transition-property: color,fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-5 svg {
  fill: #3358CC;
}

.emotion-5:hover:not(:disabled) {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #254CAC;
}

.emotion-5:active:not(:disabled) {
  color: #14328D;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:active:not(:disabled) svg {
  fill: #14328D;
}

.emotion-5:visited:not(:disabled) {
  color: #6454E3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:visited:not(:disabled) svg {
  fill: #6454E3;
}

.emotion-5:visited:hover:not(:disabled) {
  color: #6454E3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:visited:hover:not(:disabled) svg {
  fill: #6454E3;
}

.emotion-5:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-5:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-7 {
  margin: 0;
  display: inline-block;
  display: block;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h3
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
    <div
      class="emotion-4"
    >
      <a
        class="emotion-5"
        href="/"
      >
        <span
          class="emotion-6"
        >
          <span
            class="emotion-7"
          >
            Link
          </span>
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar renders a title bar with logical props overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h3
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should apply correctly only stylePreset for the heading 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #FFFFFF;
}

.emotion-3 svg {
  fill: #FFFFFF;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h3
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should apply correctly only typographyPreset for the heading 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 479px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 18px;
    line-height: 20.25px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 28px;
    line-height: 31.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h3
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should apply correctly the props and overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 4px 8px;
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 479px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 18px;
    line-height: 20.25px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 28px;
    line-height: 31.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #FFFFFF;
}

.emotion-3 svg {
  fill: #FFFFFF;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h3
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h1 size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h1
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h1>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h2 size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h2
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h2>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h3 size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h3
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h4 size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h4
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h4>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h5 size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h5
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h5>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h6 size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h6
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h6>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with default styles and given title 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: transparent;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    padding: 12px 16px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media screen and (max-width: 767px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-2::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-2::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

.emotion-3 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #09111C;
}

.emotion-3 svg {
  fill: #09111C;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <section
        class="emotion-2"
      >
        <h3
          class="nk-headline-heading emotion-3"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
